# om_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  om_engine_resources.qrc
om_engine_library/: CMakeLists.txt  om_engine.cpp  om_engine.h
om_engine_library/animation/: animation.cpp  animation.h  animation_geometry_setter.cpp  animation_geometry_setter.h  close_configuration_geometry.cpp  close_configuration_geometry.h  geometry_pair_configurator.cpp  geometry_pair_configurator.h  open_configuration_geometry.cpp  open_configuration_geometry.h  widget_animator.cpp  widget_animator.h  widget_animator.h.save
om_engine_library/animation/animation_utility/: animation_utility.cpp  animation_utility.h
om_engine_library/animation/widget_appear_animation/: configuration_geometry.cpp
om_engine_library/basic/: basic.h  om_utility.cpp  om_utility.h  side.cpp  side.h  utility.cpp  utility.h
om_engine_library/composing/: composing.cpp  composing.h  conversion_maker.cpp  conversion_maker.h  correct_conversion_maker.cpp  correct_conversion_maker.h  delta_size.cpp  geometry_scaler.cpp  geometry_scaler.h  shifter.cpp  shifter.h  stretcher.cpp  stretcher.h
om_engine_library/composing/dependencies/: conversion_maker.cpp  geometry_modifier.cpp  geometry_modifier.h  modification_factor.cpp  modification_factor.h  scaler.cpp  scaler.h  shifter.cpp  shifter.h  stretcher.cpp  stretcher.h
om_engine_library/composing/modificators/: geometry_composer.cpp  geometry_composer.h  geometry_scaler.cpp  geometry_transformer.cpp  geometry_transformer.h
om_engine_library/geometry_modification/: delta_size.h  geometry_modifier_factory.cpp  geometry_modifier_factory.h  scaler.cpp  scaler.h  shifter.cpp  shifter.h  stretcher.cpp  stretcher.h
om_engine_library/geometry_modification/dependencies/: delta_size.cpp  delta_size.h  geometry_modifier.cpp  geometry_modifier.h  modification_factor.cpp  modification_factor.h  scaler.cpp  scaler.h  shifter.cpp  shifter.h  stretcher.cpp
om_engine_library/geometry_modification/geometry_modification/: delta_size.cpp  delta_size.h  geometry_modifier.cpp  geometry_modifier.h  scaler.cpp  scaler.h  stretcher.cpp
om_engine_library/geometry_modification/modificators/: geometry_composer.cpp  geometry_composer.h  geometry_scaler.cpp  geometry_scaler.h  geometry_transformer.cpp  geometry_transformer.h
om_engine_library/geometry_modification/utility/: geometry_utility.h
om_engine_library/scaling/font_size_generator/: font_size_calculator.cpp  font_size_calculator.h  font_size_generator.cpp  font_size_generator.h  initial_widget_data.cpp  initial_widget_data.h
om_engine_library/scaling/scaling/: axes_ratio.cpp  axes_ratio.h  delta_size.cpp  delta_size.h  geometry_modifier.cpp  geometry_modifier.h  modification_factor.cpp  modification_factor.h  scaler.cpp  scaler.h  shifter.cpp  shifter.h  stretcher.cpp  stretcher.h
om_engine_library/scaling/utility/: geometry_utility.cpp  geometry_utility.h
om_engine_library/utility/: om_utility.cpp  om_utility.h
om_engine_library/widgets/: om_button.cpp  om_button.h
om_engine_library/widgets/OmButton/: om_button.cpp  om_button.h
om_engine_library/widgets/OmTimeDate/: om_td.cpp  om_td.h
om_engine_library/widgets/base_widgets/: base_frame.cpp  base_frame.h  base_widget.cpp  base_widget.h  om_primary_feature.cpp  om_primary_feature.h
om_engine_library/widgets/click_button/: click_button.cpp  click_button.h  offset_distance.cpp  offset_distance.h
om_engine_library/widgets/clock/: abstract_clock.cpp  abstract_clock.h  date_label.cpp  date_label.h  om_date_label.cpp  om_date_label.h  om_time_label.cpp  (+3 more)
(+147 files in other folders)
